--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 		  <artifactId>commons-csv</artifactId>
 		  <version>1.10.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-math3</artifactId>
+		    <version>3.6.1</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
